--- a/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
@@ -1,5 +1,5 @@
-<h2 class="text-lg/7 font-semibold text-gray-900">Event Details</h2>
-<p class="mt-1 mb-4 text-sm/5 text-gray-600"></p>
+<h2 class="text-lg/7 font-semibold text-zinc-900">Event Details</h2>
+<p class="mt-1 mb-4 text-sm/5 text-zinc-600"></p>
 <.form
   :let={f}
   id="create-event-form"
@@ -41,9 +41,38 @@
   </div>
   <div class="col-span-full flex gap-6 py-4 pb-8">
     <.button disabled={not @form.changed? or not @form.valid?}>
-      <span class="text-sm font-semibold">
-        Save
+      <span class="text-sm font-semibold capitalize">
+        {@form.type}
       </span>
+    </.button>
+
+    <.button variant={:ghost} type="reset" name="reset">
+      <span class="text-sm font-semibold">
+        Reset
+      </span>
+    </.button>
+    <div role="none" class="grow"></div>
+    <.button
+      :if={@form.type == :update}
+      type="button"
+      variant={:subtle}
+      phx-click={
+        JS.patch(
+          Routes.host_edit_event_path(
+            @socket,
+            :tickets,
+            @host.handle,
+            @event.public_id
+          ),
+          replace: true
+        )
+        |> show_modal("create_ticket")
+      }
+    >
+      <span class="text-sm font-semibold">
+        Next
+      </span>
+      <.icon name="i-lucide-chevron-right" />
     </.button>
   </div>
 </.form>
