--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -144,7 +144,8 @@
         </.button>
       </div>
       <div :for={type <- @event.ticket_types} class="flex items-center gap-4 py-2 px-4">
-        <span class="w-1 self-stretch rounded-full bg-red-500"></span>
+        <span class="w-1 self-stretch rounded-full" style={"background-color: #{type.color}"}>
+        </span>
         <div class="grow">
           <span class="text-sm/4 font-medium">{type.name}</span>
           <div class="flex gap-2 text-sm/4 text-zinc-500">
