--- a/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
+++ b/lib/gits_web/live/host_live/view_event_templates/overview.html.heex
@@ -1,26 +1,62 @@
-<div class="px-2 lg:p-0 grid gap-6">
-  <div :if={false}>
-    <.button>
-      <.icon name="i-lucide-rocket" />
-      <span>Publish</span>
-    </.button>
-  </div>
-  <div class="lg:flex gap-4 rounded-xl border p-4 text-sm/6">
-    <.icon name="i-lucide-triangle-alert" class="mt-1 text-orange-500" />
-    <div class="grid pb-2 grow">
-      <span class="font-medium">Payout details required!</span>
-      <span></span>
+<div class="grid gap-6 items-start">
+  <div :if={@ready_to_publish} class="rounded-lg border border-border px-4 py-3">
+    <div class="flex gap-2">
+      <div class="flex grow items-center gap-3">
+        <.icon name="i-lucide-circle-check" class=" text-green-500" />
+        <div class="flex items-center grow justify-between gap-6">
+          <p class="text-sm">Event ready to publish!</p>
+          <.button
+            size={:none}
+            href={@host_settings_payouts_path}
+            variant={:outline}
+            class="shrink-0 p-2"
+          >
+            <.icon name="i-lucide-rocket" />
+            <span>Publish</span>
+          </.button>
+        </div>
+      </div>
     </div>
-    <.button size={:none} href={@host_settings_payouts_path} variant={:ghost}>
-      <span>Update details &rarr;</span>
-    </.button>
   </div>
 
-  <div class="grid grid-cols-6">
-    <div class="relative col-span-full flex h-52 flex-col justify-end border p-4 lg:rounded-xl">
-      <span class="absolute top-4 text-zinc-400">Conversion rate chart</span>
-      <span>Unique views</span>
-      <span>Total orders</span>
+  <div :if={@issues != []} class="rounded-lg border px-4 py-3">
+    <div class="flex gap-3">
+      <.icon name="i-lucide-circle-alert" class=" text-orange-500 inline-flex" />
+      <div class="grow space-y-1">
+        <p class="text-sm font-medium">
+          This event is not ready to be published:
+        </p>
+        <ul class="list-inside list-disc text-sm text-zinc-500">
+          <li :for={issue <- @issues}>{issue}</li>
+        </ul>
+      </div>
     </div>
+  </div>
+
+  <div :if={not @payments_ready} class="rounded-lg border border-border px-4 py-3">
+    <div class="flex gap-2">
+      <div class="flex grow gap-3">
+        <.icon name="i-lucide-triangle-alert" class=" text-orange-500 mt-1" />
+        <div class="flex items-center grow justify-between gap-6">
+          <p class="text-sm">Payout details required!</p>
+          <.button
+            size={:none}
+            href={@host_settings_payouts_path}
+            variant={:ghost}
+            class="shrink-0"
+          >
+            <span>Update details &rarr;</span>
+          </.button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div :if={false} class="grid grid-cols-6">
+  <div class="relative col-span-full flex h-52 flex-col justify-end border p-4 lg:rounded-xl">
+    <span class="absolute top-4 text-zinc-400">Conversion rate chart</span>
+    <span>Unique views</span>
+    <span>Total orders</span>
   </div>
 </div>
