--- a/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
@@ -10,6 +10,10 @@
   phx-auto-recover="validate"
 >
   <div class="grid max-w-screen-sm grid-cols-2 gap-6">
+    <.inputs_for :let={h} :if={@form.type == :create} field={f[:host]}>
+      <.input field={h[:id]} type="hidden" value={@host.id} />
+    </.inputs_for>
+
     <.input
       field={f[:name]}
       label="Name of the event"
