--- a/lib/gits_web/live/storefront_live/event_order.html.heex
+++ b/lib/gits_web/live/storefront_live/event_order.html.heex
@@ -1,13 +1,90 @@
 <div class="mx-auto grid max-w-screen-xl items-start gap-4 gap-x-12 lg:grid-cols-[minmax(auto,48rem)_1fr] lg:gap-6">
   <div class="space-y-4 p-2 lg:row-span-3">
-    <%= if @order.state == :open do %>
+    <%= if @order_state == :anonymous do %>
+      <div class="flex items-center gap-4">
+        <.button size={:none} class="p-2" onclick="history.back()" variant={:outline}>
+          <.icon name="i-lucide-chevron-left" />
+        </.button>
+        <h3 class="text-lg font-semibold lg:col-span-full">Who are the tickets for?</h3>
+      </div>
+      <p :if={false} class=" text-sm text-zinc-700">
+        Please provide your email address to receive your order confirmation for the {@event.name} tickets.
+      </p>
+
+      <p class=" text-sm text-zinc-700">
+        We use your email address to send you important details about your purchase, the event and to keep your tickets safe.
+      </p>
+
+      <.form :let={f} phx-submit="open" for={@open_form} class="grid items-center max-w-96 gap-4">
+        <.input field={f[:email]} type="email" label="Email address" />
+        <div class="flex">
+          <.button>
+            <span>Continue</span>
+          </.button>
+        </div>
+      </.form>
+    <% end %>
+    <%= if @order_state == :open do %>
       <div class="flex items-center gap-4">
         <.button size={:none} class="p-2" onclick="history.back()" variant={:outline}>
           <.icon name="i-lucide-chevron-left" />
         </.button>
         <h3 class="text-lg font-semibold lg:col-span-full">Get Tickets</h3>
       </div>
-      <div class="grid gap-4 items-start lg:grid-cols-2">
+      <div class="grid items-start gap-4 lg:grid-cols-2">
+        <div
+          :for={{id, name, price, color, tickets} <- @ticket_types}
+          class="flex items-center gap-4 rounded-xl border p-4"
+        >
+          <span class="w-1 self-stretch rounded-full" style={"background-color: #{color}"}></span>
+          <div class="grow">
+            <span class="text-sm/4 font-medium">{name}</span>
+            <div class="flex gap-2 text-sm/4 text-zinc-500">
+              <span></span>
+            </div>
+          </div>
+          <div class="flex items-center gap-2">
+            <.form :let={f} for={@remove_ticket_form} phx-submit="remove_ticket">
+              <.inputs_for :let={tt} field={f[:ticket_type]}>
+                <.input field={tt[:id]} value={id} id={"remove_#{id}"} type="hidden" />
+
+                <.inputs_for :let={t} field={tt[:ticket]}>
+                  <.input
+                    :if={Enum.any?(tickets)}
+                    field={t[:id]}
+                    value={List.first(tickets || []) |> Map.get(:id)}
+                    id={"remove_#{id}_ticket"}
+                    type="hidden"
+                  />
+                </.inputs_for>
+              </.inputs_for>
+
+              <.button size={:none} variant={:subtle} class="lg:p-2.5 p-3">
+                <.icon name="i-lucide-minus" />
+              </.button>
+            </.form>
+
+            <span class="w-5 tabular-nums text-base/4 text-center font-medium">
+              {Enum.count(tickets)}
+            </span>
+
+            <.form :let={f} for={@add_ticket_form} phx-submit="add_ticket">
+              <.inputs_for :let={tt} field={f[:ticket_type]}>
+                <.input field={tt[:id]} value={id} id={id} type="hidden" />
+
+                <.inputs_for :let={t} field={tt[:ticket]}>
+                  <.inputs_for :let={o} field={t[:order]}>
+                    <.input field={o[:id]} id={"#{id}_ticket"} value={@order_id} type="hidden" />
+                  </.inputs_for>
+                </.inputs_for>
+              </.inputs_for>
+              <.button size={:none} variant={:subtle} class="lg:p-2.5 p-3">
+                <.icon name="i-lucide-plus" />
+              </.button>
+            </.form>
+          </div>
+        </div>
+
         <div
           :for={
             {name, description, price, count, removable_ticket, remove_ticket_form,
@@ -65,18 +142,18 @@
         phx-submit="process"
         phx-change="validate"
         for={@process_form}
-        class="sticky bottom-0 top-0 z-20 grid items-center gap-4 border-t border-zinc-100 bg-white p-2 shadow-sm lg:bottom-auto lg:top-6 lg:border-none lg:shadow-none"
+        class="sticky bottom-0 top-0 z-20 grid items-center gap-4 border-t border-zinc-100 bg-white shadow-sm lg:bottom-auto lg:top-6 lg:border-none lg:shadow-none"
       >
-        <.input type="hidden" field={f[:total]} value={@tickets_total} />
+        <.input type="hidden" field={f[:total]} value={@total} />
         <div class="flex">
-          <.button disabled={Enum.empty?(@tickets)}>
+          <.button>
             <span>Continue</span>
           </.button>
         </div>
       </.form>
     <% end %>
 
-    <%= if @order.state == :processed do %>
+    <%= if @order_state == :processed do %>
       <div class="flex items-center gap-4">
         <.form :let={f} phx-submit="reopen" for={@reopen_form}>
           <.button size={:none} class="p-2" variant={:outline}>
@@ -84,15 +161,15 @@
           </.button>
         </.form>
 
-        <h3 class="text-lg font-semibold lg:col-span-full">Confirm Order</h3>
+        <h3 class="text-lg font-semibold lg:col-span-full">Confirm your order details</h3>
       </div>
 
       <p class=" text-sm text-zinc-700">
-        Please provide your email address to receive your order confirmation for the {@event.name} tickets. We'll send you important details about your purchase and how to access your tickets.
+        You're almost done!
       </p>
     <% end %>
 
-    <%= if @order.state == :completed do %>
+    <%= if @order_state == :completed do %>
       <div class="flex items-center gap-4">
         <.button size={:none} class="p-2" onclick="history.back()" variant={:outline}>
           <.icon name="i-lucide-chevron-left" />
@@ -106,7 +183,7 @@
       </p>
     <% end %>
 
-    <%= if @order.state == :confirmed do %>
+    <%= if @order_state == :confirmed do %>
       <div class="flex items-center gap-4">
         <.button size={:none} class="p-2" onclick="history.back()" variant={:outline}>
           <.icon name="i-lucide-chevron-left" />
@@ -125,30 +202,34 @@
     <div class="grid max-w-lg grow gap-8 rounded-xl bg-zinc-100/70 p-4 lg:px-8 lg:py-10">
       <h3 class="text-lg font-semibold lg:col-span-full">Order Summary</h3>
       <dl class="grid gap-6 text-sm/6">
-        <div :if={@order.email} class="grid gap-1">
+        <div :if={@order_email} class="grid gap-1">
           <dt class="font-medium text-gray-600">Customer</dt>
           <dd class="text-zinc-500">
-            {@order.email}
+            {@order_email}
           </dd>
         </div>
 
         <div class="grid gap-1">
           <dt class="font-medium text-gray-600">Event</dt>
           <dd class="text-gray-500">
-            {@event.name}
+            {@event_name}
           </dd>
         </div>
 
-        <%= if Enum.any?(@tickets_summary) do %>
+        <%= if Enum.any?(@ticket_types) do %>
           <div class="grid gap-1">
             <dt class="font-medium text-gray-600">Tickets</dt>
             <dd class="divide-y text-gray-500">
-              <div :for={{name, price, count} <- @tickets_summary} class="py-2">
-                <div class="flex justify-between">
-                  <span>{count} &times; {name}</span>
-                  <span class="font-medium text-zinc-800">R {price}</span>
+              <%= for {id, name, price, _, tickets} <- @ticket_types do %>
+                <div :if={Enum.any?(tickets)} class="py-2">
+                  <div class="flex justify-between">
+                    <span>{Enum.count(tickets)} &times; {name}</span>
+                    <span class="font-medium text-zinc-800">
+                      R {Decimal.mult(price, Enum.count(tickets))}
+                    </span>
+                  </div>
                 </div>
-              </div>
+              <% end %>
             </dd>
           </div>
         <% end %>
@@ -157,25 +238,14 @@
       <div class="grid text-right">
         <span>Total payment</span>
         <span class="text-2xl font-medium">
-          R
-          <%= if Enum.member?([:processed, :confirmed], @order.state) do %>
-            {@order.total}
-          <% else %>
-            {@tickets_total}
-          <% end %>
+          R {@total}
         </span>
       </div>
     </div>
   </div>
 
-  <%= if @order.state == :processed do %>
+  <%= if @order_state == :processed do %>
     <.form :let={f} phx-submit="confirm" for={@confirm_form} class="grid  items-center gap-4 p-2">
-      <.input
-        field={f[:email]}
-        type={if @current_user, do: "hidden", else: "email"}
-        value={if @current_user, do: @current_user.email, else: nil}
-        label="Email address"
-      />
       <div class="flex">
         <.button>
           <span>Confirm Order</span>
@@ -184,13 +254,13 @@
     </.form>
   <% end %>
 
-  <%= if @order.state == :completed do %>
+  <%= if @order_state == :completed do %>
     <div class="flex gap-4 p-2">
-      <.button phx-click={JS.navigate(~p"/my/tickets?order=#{@order.id}")}>
+      <.button phx-click={JS.navigate(~p"/my/tickets?order=#{@order_id}")}>
         <span>View tickets</span>
       </.button>
 
-      <.button phx-click={JS.navigate(~p"/refund?order=#{@order.id}")} variant={:subtle}>
+      <.button phx-click={JS.navigate(~p"/refund?order=#{@order_id}")} variant={:subtle}>
         <span>Return tickets</span>
       </.button>
     </div>
